Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -119,6 +119,7 @@ footer.bk-footer h4 {
 .widget {
     &.extendednavigation {
         float: right;
+        width: 80%;
         .clearfix;
         @media @tablet {
             float: none;
